--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Just the Docs
-description: A Jekyll theme for documentation
-baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
-url: "https://just-the-docs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+title: Fiddie
+description: Welcome to Fiddie's Homepage!
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://fiddiemath.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 
@@ -88,8 +88,8 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "Just the Docs on GitHub":
-    - "//github.com/just-the-docs/just-the-docs"
+  "Fiddie's Homepage":
+    - "fiddiemath.github.io/"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
@@ -153,6 +153,8 @@ ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (t
 
 plugins:
   - jekyll-seo-tag
+
+markdown: kramdown
 
 kramdown:
   syntax_highlighter_opts:
