--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ exclude:
    - README.md
 
 # Set a path/url to a logo that will be displayed instead of the title
-#logo: "/assets/images/just-the-docs.png"
+#logo: "/assets/images/Fiddie.jpg"
 
 # Enable or disable the site search
 # Supports true (default) or false
