--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,9 @@ exclude:
 # Set a path/url to a logo that will be displayed instead of the title
 #logo: "/assets/images/Fiddie.jpg"
 
+# Set a path/url to a favicon that will be displayed by the browser
+favicon_ico: "/assets/images/favicon.ico"
+
 # Enable or disable the site search
 # Supports true (default) or false
 search_enabled: false
